# pray

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
cmake/: FindSIMD.cmake
debug_tool/: CMakeLists.txt  main.cpp
docs/: evaluation.txt
docs/abschlussdokument/: Makefile  paper.bib  paper.tex
docs/abschlussdokument/parts/: Beschleunigungsstrukturen.tex  Beschleunigungstechniken.tex  Datenhaltung.tex  Einleitung.tex  Evaluation.tex  Fazit.tex  GPGPU.tex  Implementierung.tex  Multithreading.tex  Optimierungen.tex  SIMD.tex
docs/benchmarks/: adaptive_sampler.json  allin.json  baseline.json  bih.json  bih_parallelbuild.json  cuda_bih.json  cuda_dummy.json  interpolating_sampler.json  kdtree.json  kdtree_parallelbuild.json  omp.json  sse.json  sse_cheats.json
docs/slides/: Tut.tex
docs/slides-abschlusspräsentation/: Tut.tex  header.tex
examples/: axis_cube.json  bih_recursion_crash.json  cube.json  dragon.json  dragon.mtl  empty.json  monkey.json  monkey.mtl  plant.json  sponza.json  sponza.mtl  sponza_p.json
examples/cube/: cube.json
examples/head_fov30/: head_fov30.json  monkey.mtl
examples/pt_cornell/: CornellBox-Original.mtl  pt_cornell.json  pt_cornell_bg.json
include/: pray.h
include/pray/: Config.h.in
slides/: Tut.tex  header.tex
slides/logos/: bauplan.eps  sdq_logo.eps
src/: CMakeLists.txt  bih.cpp  bih.hpp  bih.impl.hpp  cpu_pathtracer.hpp  cpu_pathtracer.impl.hpp  cpu_tracer.cpp  cpu_tracer.hpp  cpu_tracer.impl.hpp  cpu_tracer.inl  cuda.cu  cuda.hpp  cuda_bih.hpp  cuda_dummy_acceleration.hpp  cuda_image.hpp  cuda_kdtree.hpp  cuda_lib.hpp  cuda_pathtracer.cu  cuda_pathtracer.hpp  cuda_pathtracer.impl.hpp  cuda_ray.hpp  cuda_renderer.cu  cuda_renderer.hpp  cuda_sampler.hpp  cuda_scene.hpp  debug.hpp  dummy_acceleration.hpp  ext.cpp  ext.hpp  image.cpp  image.hpp  kdtree.hpp  kdtree.impl.hpp  logging.hpp  main.cpp  math.hpp  naive_tracer.cpp  naive_tracer.hpp  parallel_worker.hpp  pray.cc  (+11 more)
tests/: run_tests.py
tests/tests/: axis_cube.json  axis_cube.mtl  monkey.json  plant.json  plant.mtl  triangle.json  triangle.mtl
tools/: README.md  benchmark.py  permutation_benchmark.py
tools/debug_tool/: CMakeLists.txt  main.cpp
